# rdfox-rs

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cog.toml  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js  test.ttl
.cargo/: config.toml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: build.yml  clippy.yml  docs.yml  format.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/r2d2/: trait.ManageConnection.js
implementors/rdfox_rs/streamer/: trait.StreamerWithCallbacks.js
rdfox_rs/: all.html  constant.RDFOX_DEFAULT_LICENSE_FILE_NAME.html  enum.DataStoreType.html  enum.FactDomain.html  enum.PersistenceMode.html  fn.find_license.html  index.html  macro.database_call!.html  macro.database_call.html  sidebar-items.js  static.RDFOX_HOME.html  struct.ClassReport.html  struct.ConnectableDataStore.html  struct.Cursor.html  struct.CursorRow.html  struct.DataStore.html  struct.DataStoreConnection.html  struct.GraphConnection.html  struct.Mime.html  struct.Namespaces.html  struct.NamespacesBuilder.html  struct.OpenedCursor.html  struct.Parameters.html  struct.RoleCreds.html  struct.Server.html  struct.ServerConnection.html  struct.Statement.html  struct.Streamer.html  struct.Transaction.html
rdfox_rs/class_report/: index.html  sidebar-items.js  struct.ClassReport.html
rdfox_rs/connectable_data_store/: index.html  sidebar-items.js  struct.ConnectableDataStore.html
rdfox_rs/cursor/: index.html  sidebar-items.js
rdfox_rs/cursor/cursor/: index.html  struct.Cursor.html
rdfox_rs/cursor/cursor_row/: index.html  sidebar-items.js  struct.CursorRow.html
rdfox_rs/cursor/opened_cursor/: index.html  sidebar-items.js  struct.OpenedCursor.html
rdfox_rs/data_store/: index.html  struct.DataStore.html
rdfox_rs/data_store_connection/: index.html  sidebar-items.js  struct.DataStoreConnection.html
rdfox_rs/exception/: index.html
rdfox_rs/graph_connection/: index.html  sidebar-items.js  struct.GraphConnection.html
rdfox_rs/license/: constant.RDFOX_DEFAULT_LICENSE_FILE_NAME.html  fn.find_license.html  index.html  sidebar-items.js  static.RDFOX_HOME.html
rdfox_rs/namespaces/: index.html  sidebar-items.js  struct.Namespaces.html  struct.NamespacesBuilder.html
rdfox_rs/parameters/: constant.SENSITIVE_PARAMETERS.html  enum.DataStoreType.html  enum.FactDomain.html  enum.PersistenceMode.html  index.html  sidebar-items.js  struct.Parameters.html
rdfox_rs/rdfox_api/: enum.CPrefixes_DeclareResult.html  enum.CTransactionState.html  enum.CTransactionType.html  enum.CUpdateType.html  fn.CCursor_advance.html  fn.CCursor_appendResourceLexicalForm.html  fn.CCursor_appendResourceTurtleLiteral.html  fn.CCursor_canAdvance.html  fn.CCursor_destroy.html  fn.CCursor_getAnswerVariableName.html  fn.CCursor_getArity.html  fn.CCursor_getCurrentMultiplicity.html  fn.CCursor_getCurrentOffset.html  fn.CCursor_getDataStoreConnection.html  fn.CCursor_getDatatypeID.html  fn.CCursor_isAskQuery.html  fn.CCursor_open.html  fn.CCursor_produceQueryAnswers.html  fn.CCursor_produceQueryAnswersToBuffer.html  fn.CCursor_produceQueryAnswersToFile.html  fn.CCursor_stop.html  fn.CDataStoreConnection_beginTransaction.html  fn.CDataStoreConnection_clear.html  fn.CDataStoreConnection_clearCommitProcedure.html  fn.CDataStoreConnection_clearRulesAxiomsExplicateFacts.html  fn.CDataStoreConnection_commitTransaction.html  fn.CDataStoreConnection_compact.html  fn.CDataStoreConnection_createCursor.html  fn.CDataStoreConnection_destroy.html  fn.CDataStoreConnection_duplicate.html  fn.CDataStoreConnection_evaluateQuery.html  fn.CDataStoreConnection_evaluateQueryToBuffer.html  fn.CDataStoreConnection_evaluateQueryToFile.html  fn.CDataStoreConnection_evaluateStatement.html  fn.CDataStoreConnection_evaluateStatementToBuffer.html  fn.CDataStoreConnection_evaluateStatementToFile.html  fn.CDataStoreConnection_evaluateUpdate.html  fn.CDataStoreConnection_exportData.html  fn.CDataStoreConnection_exportDataToBuffer.html  fn.CDataStoreConnection_exportDataToFile.html  (+78 more)
rdfox_rs/role_creds/: constant.RDFOX_DEFAULT_ROLE_PASSWD.html  constant.RDFOX_DEFAULT_ROLE_USERID.html  index.html  sidebar-items.js  struct.RoleCreds.html
rdfox_rs/server/: index.html  struct.Server.html
rdfox_rs/server_connection/: index.html  sidebar-items.js
rdfox_rs/server_connection/connection/: index.html  (+2 more)
rdfox_rs/statement/: fn.no_comments.html  index.html  sidebar-items.js  struct.Statement.html
rdfox_rs/streamer/: index.html  sidebar-items.js  struct.RefToSelf.html  struct.Streamer.html  trait.StreamerWithCallbacks.html
rdfox_rs/transaction/: index.html  struct.Transaction.html
src/: class.rs  class_report.rs  connectable_data_store.rs  cursor.rs  data_store.rs  data_store_connection.rs  data_type.rs  data_value.rs  error.rs  exception.rs  graph.rs  graph_connection.rs  lexical_value.rs  lib.rs  license.rs  namespace.rs  namespaces.rs  parameters.rs  predicate.rs  prefix.rs  prefixes.rs  role_creds.rs  server.rs  server_connection.rs  statement.rs  streamer.rs  tests.rs  transaction.rs
src/cursor/: cursor.rs  cursor_row.rs  mod.rs  opened_cursor.rs
src/rdf/: data_type.rs  lexical_value.rs  lexical_value_union.rs  mod.rs  resource_value.rs  term.rs
src/rdfox_rs/: class_report.rs.html  connectable_data_store.rs.html  data_store.rs.html  data_store_connection.rs.html  exception.rs.html  graph_connection.rs.html  lib.rs.html  license.rs.html  namespaces.rs.html  parameters.rs.html  role_creds.rs.html  server.rs.html  statement.rs.html  streamer.rs.html  transaction.rs.html
src/server_connection/: connection.rs  mod.rs
tests/: .gitignore  concepts.ttl  load.rs  test.ttl
(+9 files in other folders)
