[package]
name = "rdfox"
description = "RDFox for Rust, a high-performance in-memory semantic graph database"
version = "5.7.0"
edition = "2021"
links = "RDFox"
authors = [
    "Jacobus Geluk <jacobus.geluk@ekgf.org>",
    "Marcelo Barbieri <marcelo.barbieri@agnos.ai>"
]
publish = false
repository = "https://github.com/EKGF/rdfox-rs"
keywords = [ "rdf", "sparql", "database", "graph-database", "datalog"]
categories = [ "database", "api-bindings"
]
license-file = "LICENSE"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
env_logger = "0.10.0"
mime = "0.3.16"
lazy_static = "1.4.0"
thiserror = "1.0.31"
regex = "1.6.0"
colored = "2.0.0"
ignore = "0.4.18"
iref = "2.1.3"
indoc = "1.0.6"
num_enum = "0.5.7"
nom = { version="7.1.1", optional=true}
phf = { version = "0.11", features = ["macros"] }
r2d2 = "0.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rdftk_iri]
git = "https://github.com/EKGF/rust-rdftk"
#version = "0.1.9"
optional = true
default-features = false

[dev-dependencies]
test-log = { version = "0.2.11", features = ["trace"] }

[build-dependencies]
curl = "0.4.43"
lazy_static = "1.4.0"
zip = "0.6.2"
bindgen = "0.61.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["nom"]
rdftk_support = ["rdftk_iri/uuid_iri"]
nom_support = ["nom"]
