[package]
name = "rdfox-rs"
description = "RDFox for Rust, a high-performance in-memory ACID-transactional semantic graph database"
version = "0.1.15"
edition = "2021"
links = "RDFox-static"
authors = [
    "Jacobus Geluk <jacobus.geluk@ekgf.org>",
    "Marcelo Barbieri <marcelo.barbieri@agnos.ai>"
]
repository = "https://github.com/EKGF/rdfox-rs"
keywords = ["rdf", "sparql", "database", "graph-database", "datalog"]
categories = ["database", "graph-database", "api-bindings", "rdf", "sparql"]
license-file = "LICENSE"
rust-version = "1.67"
readme = "README.md"
#documentation = "https://ekgf.github.io/rdfox-rs/rdfox_rs/index.html#"
documentation = "https://docs.rs/crate/rdfox-rs/"
exclude = [".github/*", ".idea/*", "rust-toolchain.toml", "cog.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = { version = "0.2.0" }
env_logger = "0.11.0"
mime = "0.3.16"
lazy_static = "1.4.0"
thiserror = "1.0.31"
fancy-regex = "0.13.0"
colored = "2.0.0"
ignore = "0.4.18"
iref = "3.1.3"
indoc = "2.0.0"
num_enum = "0.7.0"
nom = { version = "7.1.1", optional = true }
phf = { version = "0.11", features = ["macros"] }
r2d2 = "0.8.1"
iri-string = { version = "0.7.0", features = ["serde", "alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
ekg-error = { version = "0.0.8", features = ["rdfox", "fs"] }
ekg-namespace = { version = "0.0.8" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rdftk_iri]
version = "0.1.9"
optional = true
default-features = false

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "ansi"] }

[build-dependencies]
curl = "0.4.43"
lazy_static = "1.4.0"
zip = "0.6.2"
bindgen = "0.69.2"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["nom", "rdfox-7-0", "rdfox-dylib"]
rdftk-support = ["rdftk_iri/uuid_iri"]
nom-support = ["nom"]
#
# Switch on if you want to link to `libRDFox.dylib` rather than `libRDFox.a`
#
rdfox-dylib = []
#
# Select a version
#
rdfox-6-2 = []
rdfox-6-3a = []
rdfox-6-3b = []
rdfox-7-0 = []


